postgres-macros/tests/fail-stable/enum_array_to_enum_literal.stderr
error[E0277]: the trait bound `Role: sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>>>>` is not satisfied
  --> tests/fail-stable/enum_array_to_enum_literal.rs:17:10
   |
17 |         .await
   |         -^^^^^
   |         ||
   |         |unsatisfied trait bound
   |         help: remove the `.await`
   |
   = help: the trait `sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>>>>` is not implemented for `Role`
   = help: the following other types implement trait `sqlm_postgres::query::Query<Cols>`:
             `()` implements `sqlm_postgres::query::Query<()>`
             `Option<T>` implements `sqlm_postgres::query::Query<Primitive<<T as SqlType>::Type>>`
             `Option<T>` implements `sqlm_postgres::query::Query<Struct<Cols>>`
             `Option<Vec<u8>>` implements `sqlm_postgres::query::Query<Primitive<Bytea>>`
             `Vec<T>` implements `sqlm_postgres::query::Query<Primitive<<T as SqlType>::Type>>`
             `Vec<T>` implements `sqlm_postgres::query::Query<Struct<Cols>>`
             `Vec<T>` implements `sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<<T as SqlType>::Type>>>`
             `Vec<Vec<u8>>` implements `sqlm_postgres::query::Query<Primitive<Bytea>>`
           and $N others
   = note: required for `Sql<'_, sqlm_postgres::types::Array<Vec<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>>>, Role>` to implement `IntoFuture`
